--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
 <a href="HTML1.html">Bestel speciale offer</a>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/OJzuvzRArw4" title="Aldi Store Tour USA Supermarket 4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/OJzuvzRArw4" title="Aldi Store Tour USA Supermarket 4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 </body>
 </html>
