--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
   <p>hallo Jasper</p>
 
+  <p>Inflatie</p>
+
+  <a href="HTML1.html">Bestel speciale offer</a>
+
+  <iframe width="1280" height="720" src="https://www.youtube.com/embed/OJzuvzRArw4" title="Aldi Store Tour USA Supermarket 4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
